--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -159,6 +159,12 @@ jobs:
         run: |
           BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE, force = TRUE)
         shell: Rscript {0}
+ 
+      - name: get fresh tiff installation, so that EBImage can install
+        run: |
+          wget https://cran.r-project.org/src/contrib/tiff_0.1-12.tar.gz
+          R CMD install tiff_0.1-12.tar.gz
+        shell: bash {0}
 
       - name: Install dependencies pass 1
         run: |
