--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -159,7 +159,10 @@ jobs:
         run: |
           BiocManager::install(version = "${{ matrix.config.bioc }}", ask = FALSE, force = TRUE)
         shell: Rscript {0}
-
+      - name: ensure github packages on hand
+        run: |
+          BiocManager::install("vjcitn/SpatialData.data")
+        shell: Rscript {0}
       - name: Install dependencies pass 1
         run: |
           ## Try installing the package dependencies in steps. First the local
